--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,17 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>gp-plastic-petition-vue</title>
+    <!-- <link rel="icon" href="<%= BASE_URL %>favicon.ico"> -->
+    <meta name="description" content="立即投票，讓你最支持的零售商，實踐減塑！">
+    <meta property="og:title" content="超市減塑，誰當先鋒 | 綠色和平">
+    <meta property="og:image" content="<%= require('@/assets/img/og-image.jpg') %>" />
+    <link rel="shortcut icon" type="image/ico" href="https://www.greenpeace.org/global/favicon.ico">
+
+    <link rel="preload" href="<%= require('@/assets/fonts/NotoSansCJKtc-Regular.otf') %>" as="font" crossorigin>
+    <link rel="preload" href="<%= require('@/assets/fonts/NotoSansCJKtc-Medium.otf') %>" as="font" crossorigin>
+    <link rel="preload" href="<%= require('@/assets/fonts/EngGoth.ttf') %>" as="font" crossorigin>
+
+    <title>超市減塑 誰當先鋒</title>
   </head>
   <body>
     <noscript>
