Read number petitions from server JS_VARS.

--- a/public/index.html
+++ b/public/index.html
@@ -57,6 +57,13 @@
   <div id="app"></div>
 
 
+  <script type="text/javascript" >
+      var JS_VARS = {
+          numResponses: 3234,
+          numGoalResponses: 12345
+      }
+  </script>
+
   <form id="mc-form" method="post" action="http://cloud.greenhk.greenpeace.org/process_">
     <input type="hidden" name="LeadSource" value="NuclearPetition">
     <input type="hidden" name="PetitionIssueType" value="Oceans">
