--- a/public/index.html
+++ b/public/index.html
@@ -1,54 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant-TW">
 
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <!-- <link rel="icon" href="<%= BASE_URL %>favicon.ico"> -->
+
   <meta name="description" content="立即連署，要求十大零售通路，減少塑膠包裝！">
+  <meta property="og:site_name" content="Greenpeace">
+  <meta property="og:type" content="website" />
   <meta property="og:title" content="超市減塑，誰當先鋒 | 綠色和平">
   <meta property="og:image" content="<%= require('@/assets/img/og-image.jpg') %>" />
   <link rel="shortcut icon" type="image/ico" href="https://www.greenpeace.org/global/favicon.ico">
 
-  <link rel="preload" href="<%= require('@/assets/fonts/NotoSansCJKtc-Regular.otf') %>" as="font" crossorigin>
-  <link rel="preload" href="<%= require('@/assets/fonts/NotoSansCJKtc-Medium.otf') %>" as="font" crossorigin>
-  <link rel="preload" href="<%= require('@/assets/fonts/EngGoth.ttf') %>" as="font" crossorigin>
+  <!-- <link rel="preload" href="<%= require('@/assets/fonts/NotoSansCJKtc-Regular.otf') %>" as="font" crossorigin> -->
+  <!-- <link rel="preload" href="<%= require('@/assets/fonts/NotoSansCJKtc-Medium.otf') %>" as="font" crossorigin> -->
+  <!-- <link rel="preload" href="<%= require('@/assets/fonts/EngGoth.ttf') %>" as="font" crossorigin> -->
+
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400&display=swap&subset=chinese-traditional" rel="stylesheet">
+
 
   <title>超市減塑 誰當先鋒</title>
-  <script>
-    //Campaign Information
-    window.dataLayer = window.dataLayer || [];
-    dataLayer.push({
-      'gBasket': 'Good Life',
-      'gCampaign': 'Plastics Free Future',
-      'gScope': 'Global',
-      'gDepartment': 'Campaign',
-    });
-  </script>
-  <script type="application/javascript">(function(w,d,t,r,u){w[u]=w[u]||[];w[u].push({'projectId':'10000','properties':{'pixelId':'10094925'}});var s=d.createElement(t);s.src=r;s.async=true;s.onload=s.onreadystatechange=function(){var y,rs=this.readyState,c=w[u];if(rs&&rs!="complete"&&rs!="loaded"){return}try{y=YAHOO.ywa.I13N.fireBeacon;w[u]=[];w[u].push=function(p){y([p])};y(c)}catch(e){}};var scr=d.getElementsByTagName(t)[0],par=scr.parentNode;par.insertBefore(s,scr)})(window,document,"script","https://s.yimg.com/wi/ytc.js","dotq");</script>
+
+  <style>
+    #mc-form {display: none;}
+  </style>
 
   <!-- Google Tag Manager -->
-  <script>
-    (function (w, d, s, l, i) {
-      w[l] = w[l] || [];
-      w[l].push({
-        'gtm.start': new Date().getTime(),
-        event: 'gtm.js'
-      });
-      var f = d.getElementsByTagName(s)[0],
-        j = d.createElement(s),
-        dl = l != 'dataLayer' ? '&l=' + l : '';
-      j.async = true;
-      j.src =
-        'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-      f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-WRM6WK6');
-  </script>
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-WRM6WK6');</script>
   <!-- End Google Tag Manager -->
 </head>
 
 <body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WRM6WK6"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+
   <noscript>
     <strong>We're sorry but gp-plastic-petition-vue doesn't work properly without JavaScript enabled. Please enable it
       to continue.</strong>
@@ -56,48 +48,36 @@
 
   <div id="app"></div>
 
+  <!-- MC_FORM_STARTS -->
+  <form method="post" action="https://cloud.greenhk.greenpeace.org/up-dev-endpoint" class="" id="mc-form">
+    <input type="hidden" name="numSignupTarget" value="100">
+    <input type="hidden" name="numResponses" value="30">
 
-  <script type="text/javascript" >
-      var JS_VARS = {
-          numResponses: 3234,
-          numGoalResponses: 12345
-      }
-  </script>
+    <input placeholder="FirstName" name="FirstName" type="text" value="">
+    <input placeholder="LastName" name="LastName" type="text" value="">
+    <input placeholder="Email" name="Email" type="email" value="">
+    <input placeholder="MobilePhone" name="MobilePhone" type="tel" value="">
+    <input placeholder="Birthdate" name="Birthdate" type="text" value="">
+    <input placeholder="OptIn" name="OptIn" type="checkbox" value="">
 
-  <form id="mc-form" method="post" action="http://cloud.greenhk.greenpeace.org/process_">
-    <input type="hidden" name="LeadSource" value="NuclearPetition">
-    <input type="hidden" name="PetitionIssueType" value="Oceans">
-    <input type="hidden" name="CampaignId" value="7010k000000nydwAAA">
+    <input type="hidden" name="req" value="post_data">
+    <input type="hidden" name="LeadSource" value="Petition - Plastics">
+    <input type="hidden" name="Petition_Interested_In_Arctic__c" value="false">
+    <input type="hidden" name="Petition_Interested_In_Climate__c" value="false">
+    <input type="hidden" name="Petition_Interested_In_Forest__c" value="false">
+    <input type="hidden" name="Petition_Interested_In_Health__c" value="false">
+    <input type="hidden" name="Petition_Interested_In_Oceans__c" value="false">
+    <input type="hidden" name="Petition_Interested_In_Plastics__c" value="true">
+    <input type="hidden" name="CampaignId" value="7010k000000iJ7aAAE">
+    <input type="hidden" name="UtmMedium" value="">
     <input type="hidden" name="UtmSource" value="">
-    <input type="hidden" name="DonationPageUrl" value="https://www.google.com.au/?gws_rd=ssl">
-
-    <label for="FirstName">First name:</label>
-    <br>
-    <input type="text" id="firstName" name="firstName">
-    <br>
-    <label for="LastName">Last name:</label>
-    <br>
-    <input type="text" id="LastName" name="lastName">
-    <br>
-    <label for="Email">Email:</label>
-    <br>
-    <input type="text" id="Email" name="Email">
-    <br>
-    <label for="Email">MobilePhone:</label>
-    <br>
-    <input type="text" id="MobilePhone" name="MobilePhone">
-    <br>
-    <label for="Birthdate">Birthdate:</label>
-    <br>
-    <input type="text" id="Birthdate" name="Birthdate">
-    <br>
-     <label for="OptIn">Opt-In:</label>
-    <br>
-    <input type="checkbox" id="OptIn" name="OptIn" value="true">
-    <br>
-    <input type="submit" value="Submit">
-    <input name="Submitted" type="hidden" value="true">
+    <input type="hidden" name="UtmCampaign" value="">
+    <input type="hidden" name="UtmContent" value="">
+    <input type="hidden" name="UtmTerm" value="">
+    <input type="hidden" name="DonationPageUrl" value="https://www.greenpeace.org/eastasia/">
+    <input name="req" type="hidden" value="post_data">
   </form>
+  <!-- MC_FORM_ENDS -->
 
 </body>
 
